# UserAccountService/src/main/java/uk/gov/cshr/useraccount/model/UserAccount.java
@@ -1,0 +1,50 @@
+package uk.gov.cshr.useraccount.model;
+
+import io.swagger.annotations.ApiModelProperty;
+import java.io.Serializable;
+import java.sql.Timestamp;
+import java.util.Date;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.SequenceGenerator;
+import javax.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+@Entity
+@Builder
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+@Table(name = "useraccount")
+@SequenceGenerator(name = "useraccount_id_seq", sequenceName = "useraccount_id_seq", allocationSize = 1)
+@EqualsAndHashCode
+public class UserAccount implements Serializable {
+
+    private static final long serialVersionUID = 1L;
+
+    @Id
+    @Column(name = "id", columnDefinition = "serial")
+    @GeneratedValue(strategy = GenerationType.AUTO, generator = "useraccount_id_seq")
+    @ApiModelProperty(notes = "Autogenerated on create.", readOnly = true)
+    private Long id;
+
+    @Column(nullable = false)
+    private String email;
+
+    @Column(nullable = false)
+    private String userid;
+
+    @Column(nullable = false)
+    private String username;
+
+    @Builder.Default
+    @Column(nullable = false)
+    private Timestamp created = new Timestamp(new Date().getTime());
+}
